configured the frontend build